<resources>
    <string name="app_name">Class Crate</string>
    <string name="title_activity_navigation_drawer_views">NavigationDrawerViewsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Class Crate</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="videos">VIDEOS</string>
    <string name="this_is_image">This is Image</string>

<!--    <string name="default_web_client_id">1234567890-abc123def456.apps.googleusercontent.com</string>-->
    <string name="default_web_client_id">YOUR-WEB-CLIENT-ID.apps.googleusercontent.com</string>
    <string name="app_gmail">codebytgy@gmail.com</string>

    <string name="about_members">About Members:</string>

    <string name="semester_i">Semester I</string>
    <string name="semester_ii">Semester II</string>
    <string name="semester_iii">Semester III</string>
    <string name="semester_iv">Semester IV</string>
    <string name="semester_v">Semester V</string>

    <string name="subject_v">Subject V</string>
    <string name="subject_iv">Subject IV</string>
    <string name="subject_iii">Subject III</string>
    <string name="subject_ii">Subject II</string>
    <string name="subject_i">Subject I</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="exit">Exit</string>
    <string name="book">BOOK</string>
    <string name="notes">NOTES</string>
    <string name="syllabus">Syllabus</string>
    <string name="models">MODELS</string>
    <string name="exam_papers">EXAM PAPERS</string>
    <string name="bca_crate">BCA CRATE</string>
    <string name="yatendra_kumar">👉 Yatendra Kumar</string>
    <string name="gaurav_kumar">👉 Gaurav Kumar</string>
    <string name="developed_by">Developed By :</string>


</resources>