<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/bg_image"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
<!--    android:layout_height="@dimen/nav_header_height"-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/nav_header_desc"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:background="@drawable/bg_btn"
        android:elevation="20dp"
        />
<!--        android:background="@drawable/btn_social_media"-->
<!--        android:paddingTop="@dimen/nav_header_vertical_spacing"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingBottom="8dp"
        android:text="Class Crate"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/icon_email_48"
        android:contentDescription="@string/this_is_image"
        android:layout_marginRight="10dp"
        />
    <TextView
        android:id="@+id/copyEmainId"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_gmail" />

    </LinearLayout>


</LinearLayout>