<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SemesterFragment"
    android:id="@+id/frameLayoutSemester"
    style="@style/Main_BG" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        style="@style/Main_BG">

        <TextView
            android:id="@+id/title_semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SEMESTER"
            android:textSize="20sp"
            android:textStyle="bold"
            style="@style/TEXT_BG"
            android:layout_gravity="center"/>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="4"
            android:layout_marginTop="16dp"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:useDefaultMargins="true">

            <LinearLayout
                android:id="@+id/btnSem1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:focusable="true"
                android:orientation="vertical"
                style="@style/ButtonBG"
                android:gravity="center"
                android:padding="10dp"
                android:elevation="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/this_is_image"
                    android:src="@drawable/icon_notes" />
                <TextView
                    android:id="@+id/tvSem1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester_i"
                    style="@style/TEXT_BG"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSem2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:focusable="true"
                android:orientation="vertical"
                style="@style/ButtonBG"
                android:gravity="center"
                android:padding="10dp"
                android:elevation="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/this_is_image"
                    android:src="@drawable/icon_notes" />
                <TextView
                    android:id="@+id/tvSem2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester_ii"
                    style="@style/TEXT_BG"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSem3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:focusable="true"
                android:orientation="vertical"
                style="@style/ButtonBG"
                android:gravity="center"
                android:padding="10dp"
                android:elevation="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/this_is_image"
                    android:src="@drawable/icon_notes" />
                <TextView
                    android:id="@+id/tvSem3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester_iii"
                    style="@style/TEXT_BG"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSem4"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:focusable="true"
                android:orientation="vertical"
                style="@style/ButtonBG"
                android:gravity="center"
                android:padding="10dp"
                android:elevation="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/this_is_image"
                    android:src="@drawable/icon_notes" />
                <TextView
                    android:id="@+id/tvSem4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester_iv"
                    style="@style/TEXT_BG"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSem5"
                style="@style/ButtonBG"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp"
                android:elevation="4dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">
                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/this_is_image"
                    android:src="@drawable/icon_notes" />
                <TextView
                    android:id="@+id/tvSem5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester_v"
                    style="@style/TEXT_BG"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </GridLayout>

    </LinearLayout>
</FrameLayout>