<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsLayout"
    android:paddingTop="35dp"
    android:background="#121212"
    android:id="@+id/layout_about_us"
    >
    <LinearLayout
        android:id="@+id/linearLayout_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/bg2"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="35dp"
            android:background="?android:attr/listDivider"
            android:foreground="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/about_members"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:foreground="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/developed_by"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/yatendra_kumar"
            android:textColor="@color/white"
            android:textSize="30sp"
            style="@style/TEXT_BG"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btnLinkedInTGY"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/btn_social_media"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_linked_in_48" />
            <ImageButton
                android:id="@+id/btnGmailTGY"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/btn_social_media"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_gmail_48" />
            <ImageButton
                android:id="@+id/btnInstagramTGY"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/btn_social_media"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_instagram_48" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/gaurav_kumar"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:textSize="30sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageButton
                android:id="@+id/btnLinkedInGau"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_linked_in_48"
                android:background="@drawable/btn_social_media"
                android:layout_marginHorizontal="10dp"
                />
            <ImageButton
                android:id="@+id/btnGmailGau"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_gmail_48"
                android:background="@drawable/btn_social_media"
                android:layout_marginHorizontal="10dp"
                />
            <ImageButton
                android:id="@+id/btnInstagramGau"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_instagram_48"
                android:background="@drawable/btn_social_media"
                android:layout_marginHorizontal="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="10dp"
        android:background="@drawable/bg2"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout_about_us"
        app:layout_constraintTop_toTopOf="@id/linearLayout_about_us">
        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logonew"
            />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>